--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,8 @@ bevy = { version = "0.17.2", default-features = false, features = ["bevy_log"] }
 quinn = { version = "0.11.9", default-features = false, features = [
   "log",
   "ring",
-  "async-io",
+  "runtime-smol",
 ] }
+
+[dev-dependencies]
+rcgen = "0.14.5"
